auth-service full test coverage